@@ -2,6 +2,7 @@
 v7.0.0-git
 ----------
 
+[mms] IMP no longer uses MDN status stored in the maillog backend by default.
 [mms] Add ability to download individual files from within a .tgz attachment.
 [mms] Improved display of contents of ZIP attachments.
 [mms] Contacts popup now does address search dynamically, without the need to
